Commit al master del blogpost en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>aqui vamos a hacer un blog del post</h1>
-    <p>Y este es el parrafo de inicio</p>
+   <div id="container">
+       <div id="post">
+            <H1>Este es el titulo del post</H1>
+            <p>Este es el parrafo que se mostrara los experimentos con 
+                ramas.
+            </p>
+       </div>
+   </div>
     
 </body>
 </html>
