Estructura inicial de la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,6 +9,9 @@
 </head>
 <body>
    <div id="container">
+       <div id="cabecera">
+           Cabecera
+       </div>
        <div id="post">
             <H1>Este es el titulo del post</H1>
             <p>Este es el parrafo que se mostrara los experimentos con 
