--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,10 @@
 <body>
    <div id="container">
        <div id="cabecera">
-           Cabecera
+           Hyperblog
+           <span id="tagline">tu blog de 
+               confianza
+           </span>
        </div>
        <div id="post">
             <H1>Este es el titulo del post</H1>
