--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,10 @@
             <p>Este es el parrafo que se mostrara los experimentos con 
                 ramas.
             </p>
+            <p>
+                los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas 
+                que ir a conferencias o salir en youtube.
+            </p>
        </div>
    </div>
     
