Agrege suscripcio, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
        <div id="cabecera">
            Hyperblog
            <span id="tagline">tu blog de 
-               confianza
+               maestro
            </span>
        </div>
        <div id="post">
@@ -24,6 +24,7 @@
                 los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas 
                 que ir a conferencias o salir en youtube.
             </p>
+            <p>Suscribete y dale like</p>
        </div>
    </div>
     
